crates/shape-address/tests/ui/shape_describe_missing_field_policy.stderr
error: shape field needs a dimension
 --> tests/ui/shape_describe_missing_field_policy.rs:6:5
  |
6 |     value: String,
  |     ^^^^^
