crates/shape-address/tests/ui/shape_describe_missing_field_policy.rs
use fe_shape_address::ShapeDescribe;

#[derive(Clone, ShapeDescribe)]
#[shape(kind = "bad")]
struct MissingFieldPolicy {
    value: String,
}

fn main() {}
